Refactoring: moved annotations property copying
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC96I2

Description: Created lowering before Checker phase that handles annotations/properties copying

Signed-off-by: nadolskyanton <nadolsky.anton@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -253,6 +253,8 @@ libes2panda_sources = [
   "compiler/lowering/ets/topLevelStmts/topLevelStmts.cpp",
   "compiler/lowering/ets/typeFromLowering.cpp",
   "compiler/lowering/ets/unionLowering.cpp",
+  "compiler/lowering/ets/annotationCopyLowering.cpp",
+  "compiler/lowering/ets/annotationCopyPostLowering.cpp",
   "compiler/lowering/phase.cpp",
   "compiler/lowering/plugin_phase.cpp",
   "compiler/lowering/resolveIdentifiers.cpp",
