TS type assertion errors and diagnostics undo
Adds a mechanism for undoing log entries in the diagnostic engine.  This
is useful when there are multiple parse attempts, like in this case.

This way the generic arrow function parser and the assertion parser are
both free to emit any diagnostics and their caller can choose which ones
to keep.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICA4XY

Testing: ast, astchecker, parser

Fixes #24577 internal issue.

Change-Id: I7679f1d96db189cfb1ab31b256f62919cedcc521
Signed-off-by: Peter Pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1121,6 +1121,10 @@ syntax:
   id: 150
   message: "Trailing comma is not allowed in this context."
 
+- name: TS_TYPE_ASSERTION
+  id: 178094
+  message: "Type cast syntax '<type>' is not supported, please use 'as' keyword instead"
+
 - name: TYPEOF_IN_ANNOTATION
   id: 309
   message: "Result of 'typeof' operator is not supported to be used as type annotation."
