--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -71,7 +71,9 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/navigate_to.cpp",
     "src/organize_imports.cpp",
     "src/quick_info.cpp",
+    "src/refactor_provider.cpp",
     "src/refactors/convert_function.cpp",
+    "src/refactors/refactor_types.cpp",
     "src/references.cpp",
     "src/register_code_fix/add_missing_declare_property.cpp",
     "src/register_code_fix/fix_missing_call_parantheses.cpp",
