Support function type comparation
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICAEC9

Reason: Support function type comparation

Description:
1. collect lambda class from method
2. emit functional_reference annotation in emitter

Signed-off-by: Ocean <yangyang623@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -104,6 +104,9 @@ defines:
   - name: ets/annotation/Module
     ref: ETS_ANNOTATION_MODULE
     comment: Ets record
+  - name: ets/annotation/FunctionalReference
+    ref: ETS_ANNOTATION_FUNCTIONAL_REFERENCE
+    comment: Ets record
   - name: ets/coroutine/Async
     ref: ETS_COROUTINE_ASYNC
   - name: ets/annotation/DynamicCall
