--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -32,6 +32,9 @@ set(ES2PANDA_LSP_SRC
   ./src/refactors/convert_function.cpp
   ./src/formatting/formatting_context.cpp
   ./src/formatting/formatting_settings.cpp
+  ./src/formatting/formatting.cpp
+  ./src/formatting/rules_map.cpp
+  ./src/formatting/rules.cpp
   ./src/string_completions.cpp
   ./src/rename.cpp
   ./src/generate_constructor.cpp
