--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -55,6 +55,9 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/find_rename_locations.cpp",
     "src/formatting/formatting_context.cpp",
     "src/formatting/formatting_settings.cpp",
+    "src/formatting/formatting.cpp",
+    "src/formatting/rules_map.cpp",
+    "src/formatting/rules.cpp",
     "src/get_adjusted_location.cpp",
     "src/get_definition_and_bound_span.cpp",
     "src/inlay_hints.cpp",
