Fix_doesnt_implement_inherited_abstract_member
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICANHJ
Signed-off-by: lijunru <lijunru9@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -211,6 +211,10 @@ ets2panda_add_gtest(lsp_api_test_code_fix_registration CPP_SOURCES
     code_fix_registration_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_fix_abstract_member CPP_SOURCES
+    fix_class_doesnt_implement_inherited_abstract_member_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_get_name_or_dotted_name_span CPP_SOURCES
     get_name_or_dotted_name_span_test.cpp
 )
