--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -77,6 +77,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/refactors/refactor_types.cpp",
     "src/references.cpp",
     "src/register_code_fix/add_missing_declare_property.cpp",
+    "src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp",
     "src/register_code_fix/fix_missing_call_parantheses.cpp",
     "src/register_code_fix/fix_nan_equality.cpp",
     "src/register_code_fix/forgetten_this_property_access.cpp",
