--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -59,6 +59,7 @@ set(ES2PANDA_LSP_SRC
   ./src/types.cpp
   ./src/navigate_to.cpp
   ./src/code_fix_provider.cpp
+  ./src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp
   ./src/register_code_fix/add_missing_declare_property.cpp
   ./src/register_code_fix/fix_missing_call_parantheses.cpp
   ./src/register_code_fix/fix_nan_equality.cpp
