Add diagnostic for generator function
Fixes #24865 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICAN1E

Change-Id: Iee44ecfe838a60c13738bf54226a0e73c566bd00
Signed-off-by: peter.pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1263,3 +1263,7 @@ syntax:
 - name: ERROR_ARKTS_NO_IMPORT_ASSERTIONS
   id: 313
   message: "Import assertion is not supported, please use the ordinary import syntax instead!"
+
+- name: GENERATOR_FUNCTION
+  id: 314
+  message: "Generator functions are not supported, please use async/await mechanism for multitasking"
