[lsp]: support codefix for isolated declaration
Issue:              https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICA550
Signed-off-by: liushitong <liushitong@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -17,6 +17,7 @@ set(ES2PANDA_LSP_SRC
   ./src/class_hierarchy_info.cpp
   ./src/classifier.cpp
   ./src/internal_api.cpp
+  ./src/isolated_declaration.cpp
   ./src/cancellation_token.cpp
   ./src/completions.cpp
   ./src/organize_imports.cpp
