[LSPAPI] Change Tracker
Issue : https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC8M7Y
Signed-off-by: yunusemrekarakaya <yunus.emre.karakaya1@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -43,6 +43,7 @@ set(ES2PANDA_LSP_SRC
   ./src/services/services.cpp
   ./src/services/utilities.cpp
   ./src/line_column_offset.cpp
+  ./src/text_change/change_tracker.cpp
   ./src/inlay_hints.cpp
   ./src/get_class_property_info.cpp
   ./src/create_type_help_items.cpp
