--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -168,6 +168,10 @@ ets2panda_add_gtest(lsp_api_test_find_rename_locations CPP_SOURCES
     find_rename_locations_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_change_tracker CPP_SOURCES
+    change_tracker_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_get_safe_delete_info CPP_SOURCES
     get_safe_delete_info_test.cpp
 )
