--- a/ets2panda/test/unit/lowerings/CMakeLists.txt
+++ b/ets2panda/test/unit/lowerings/CMakeLists.txt
@@ -34,3 +34,7 @@ ets2panda_add_gtest(node_history_test
 ets2panda_add_gtest(convert_primitive_cast_method_call
     CPP_SOURCES convert_primitive_cast_method_call.cpp
 )
+
+ets2panda_add_gtest(interface_object_literal_test
+    CPP_SOURCES interface_object_literal.cpp
+)
