[Bug] To much of expected errors
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICA5Y8
Signed-off-by: eraycinar <eray.cinar1@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1231,3 +1231,7 @@ syntax:
 - name: CONFLICTING_FIELD_MODIFIERS
   id: 305
   message: "Conflicting modifiers '!' and '?' on field."
+
+- name: DEEP_NESTING
+  id: 306
+  message: "Maximum allowed nesting level exceeded."
