[Bug] To much of expected errors
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICA5Y8
Signed-off-by: eraycinar <eray.cinar1@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1191,3 +1191,7 @@ syntax:
 - name: PREDEFINED_TYPE_AS_IDENTIFIER
   id: 295
   message: "{} is a predefined type, cannot be used as an identifier"
+
+- name: DEEP_NESTING
+  id: 306
+  message: "Maximum allowed nesting level exceeded."
