Check build-system consistency
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICAZFX

Reason:
When building system through both CMake and GN tools, inconsistency arises because:
-CMake separates source file lists (in CMakeLists.txt) from header/yaml file lists (in public/CMakeLists.txt)
-GN consolidates all three file types (sources/headers/yaml) in a single BUILD.gn

This structural divergence between the build systems creates maintenance challenges and potential synchronization errors.

Description:
A Python script (ets_frontend/es2panda/scripts/build_consistency_checker.py) has been implemented to validate synchronization between CMake and GN build systems. The script performs cross-validation of source files, header files, and yaml files referenced in both build configurations. When inconsistencies are detected, it terminates the build process with error messages specifying the mismatched file paths.
The checker is integrated into both:
-ets_frontend/es2panda/CMakeLists.txt
-ets_frontend/es2panda/BUILD.gn
ensuring mandatory verification during all build operations.

Signed-off-by: anjiaqi <anjiaqi4@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -31,6 +31,12 @@ config("libes2panda_public_config") {
   ]
 }
 
+action("check_build_system_consistency") {
+  script = "./scripts/check_build_system_consistency.py"
+  args = [ rebase_path(".", root_build_dir) ]
+  outputs = [ "$target_gen_dir/consistency_check.stamp" ]
+}
+
 libes2panda_sources = [
   "ast_verifier/ASTVerifier.cpp",
   "ast_verifier/helpers.cpp",
@@ -769,6 +775,8 @@ HEADERS_TO_BE_PARSED = [
   "es2panda.h",
   "ast_verifier/ASTVerifier.h",
   "util/importPathManager.h",
+  "util/path.h",
+  "util/arktsconfig.h"
 ]
 
 ES2PANDA_API_GENERATED = [
@@ -1034,6 +1042,8 @@ ES2PANDA_API_GENERATED = [
   "$LIBGEN_DIR/gen/headers/parser/program/program.yaml",
   "$LIBGEN_DIR/gen/headers/ast_verifier/ASTVerifier.yaml",
   "$LIBGEN_DIR/gen/headers/util/importPathManager.yaml",
+  "$LIBGEN_DIR/gen/headers/util/path.yaml",
+  "$LIBGEN_DIR/gen/headers/util/arktsconfig.yaml"
 ]
 
 ES2PANDA_API = [
@@ -1053,6 +1063,7 @@ action("libes2panda_public_parse_headers") {
   deps = [
     ":es2panda_options_gen_options_h",
     ":gen_es2panda_lexer_tokenType_h",
+    ":check_build_system_consistency",
   ]
 
   generated_headers = [
