--- a/ets2panda/CMakeLists.txt
+++ b/ets2panda/CMakeLists.txt
@@ -642,9 +642,9 @@ set(ES2PANDA_LIB_SRC
   util/helpers.cpp
   util/importPathManager.cpp
   util/path.cpp
+  util/plugin.cpp
   util/perfMetrics.cpp
   util/ustring.cpp
-  test/utils/panda_executable_path_getter.cpp
   evaluate/debugInfoDeserialization/debugInfoDeserializer.cpp
   evaluate/debugInfoDeserialization/inheritanceResolution.cpp
   evaluate/debugInfoDeserialization/methodBuilder.cpp
