--- a/ets2panda/test/CMakeLists.txt
+++ b/ets2panda/test/CMakeLists.txt
@@ -58,6 +58,7 @@ function(ets2panda_add_gtest TARGET)
                 ${ES2PANDA_ROOT}/test/utils/checker_test.cpp
                 ${ES2PANDA_ROOT}/test/utils/scope_init_test.cpp
                 ${ES2PANDA_ROOT}/test/utils/plugin_conversion_rule_test.cpp
+                ${ES2PANDA_ROOT}/test/utils/panda_executable_path_getter.cpp
                 ${ARG_CPP_SOURCES}
             LIBRARIES
                 es2panda-public
