--- a/ets2panda/test/unit/CMakeLists.txt
+++ b/ets2panda/test/unit/CMakeLists.txt
@@ -43,6 +43,10 @@ ets2panda_add_gtest(es2panda_globalETSObjectType_tests
     CPP_SOURCES globalETSObjectType_test.cpp
 )
 
+ets2panda_add_gtest(es2panda_union_emit_standard_test
+    CPP_SOURCES union_emit_test.cpp
+)
+
 if (PANDA_TARGET_LINUX AND PANDA_TARGET_64)
     ets2panda_add_gtest(sizeof_node_tests
         CPP_SOURCES sizeof_node_test.cpp
