Improve errors for ExpectIdentifier
Literals and reserved keywords now result in more helpful errors.

Fixes #24542 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICB8X7

Testing:
ast, parser, astchecker

Change-Id: I7ec5c7b534f1aef2df8539d0696a2e1e0add651f
Signed-off-by: Peter Pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1267,3 +1267,11 @@ syntax:
 - name: GENERATOR_FUNCTION
   id: 314
   message: "Generator functions are not supported, please use async/await mechanism for multitasking"
+
+- name: LITERAL_VALUE_IDENT
+  id: 315
+  message: "Number, string or computed value property name '{}' is not allowed, use classes to access data by property names that are identifiers"
+
+- name: HARD_KEYWORD_IDENT
+  id: 316
+  message: "Hard keyword '{}' cannot be used as identifier"
