fix sdk and ASON rule
Issue: ICB9IW
Description: Use correct rule name for Sdk rule when we try to create a
new instance from an interface and fix ASON rule.

Signed-off-by: Utku Enes GURSEL <utku.enes.gursel1@huawei-partners.com>

--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -24,6 +24,7 @@
     "test_main": "npm run testrunner -- -d test/main",
     "test_ohmurl": "npm run testrunner -- -d test/ohmurl",
     "test_interop": "npm run testrunner -- -d test/interop",
+    "test_sdk": "npm run testrunner -- -d test/sdkwhite",
     "test_concurrent": "npm run testrunner -- -d test/concurrent",
     "test_rules": "npm run testrunner -- -d test/rules",
     "test_regression": "npm run testrunner -- -d test/regression",
