--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -207,3 +207,6 @@ ets2panda_add_gtest(lsp_api_test_todo_comments CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test_navigate_to CPP_SOURCES
     navigate_to_test.cpp
 )
+ets2panda_add_gtest(lsp_api_test_code_fix_registration CPP_SOURCES
+    code_fix_registration_test.cpp
+)
