Add error for 'as const'
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICBFV0

Reason:
Typeof keyword in type annotation and instanceof with a type on the left side is invalid.

Description:
Added checks for these cases and error logging.

Change-Id: Iee44ecfe838a60c13738bf54226a0e73c566bd00
Signed-off-by: Haag Boglarka <boglarka.haag@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1251,3 +1251,7 @@ syntax:
 - name: WRONG_LEFT_OF_INSTANCEOF
   id: 310
   message: "The left operand of 'instanceof' operator cannot be a type."
+
+- name: AS_CONST_USAGE
+  id: 311
+  message: "'as const' assertion is not supported."
