Add diagnostics for export assignment
Fixes #24666 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICBIUN

Change-Id: I8a543f2f20a02950f139b395a50890e9c33bd91d
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1235,3 +1235,7 @@ syntax:
 - name: OPTIONAL_VARIABLE
   id: 306
   message: "Optional variable is deprecated and no longer supported."
+
+- name: ERROR_ARKTS_NO_EXPORT_ASSIGNMENT
+  id: 307
+  message: "'export = ...' syntax is not supported, use regular import/export instead!"
