--- a/ets2panda/declgen_ets2ts/BUILD.gn
+++ b/ets2panda/declgen_ets2ts/BUILD.gn
@@ -16,6 +16,7 @@ import("//build/ohos.gni")
 
 ohos_executable("declgen_ets2ts") {
   sources = [
+    "isolatedDeclgenChecker.cpp",
     "declgenEts2Ts.cpp",
     "main.cpp",
   ]
