--- a/ets2panda/test/unit/CMakeLists.txt
+++ b/ets2panda/test/unit/CMakeLists.txt
@@ -16,6 +16,7 @@ if(NOT PANDA_REGRESSION_TESTS)
 endif()
 
 add_subdirectory(cfg)
+add_subdirectory(declgen)
 add_subdirectory(dynamic)
 add_subdirectory(lowerings)
 add_subdirectory(public)
