Add diagnostics for ambient declarations
Fixes #24687 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICBZ1F

Change-Id: I616e52ad50e43b2d1b5b87772ab64261a46202cc
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1239,3 +1239,7 @@ syntax:
 - name: ERROR_ARKTS_NO_EXPORT_ASSIGNMENT
   id: 307
   message: "'export = ...' syntax is not supported, use regular import/export instead!"
+
+- name: ERROR_ARKTS_NO_AMBIENT_DECLS
+  id: 308
+  message: "Ambient module declaration is not supported!"
