Add error for invalid typeof and instanceof
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC9IO1

Reason:
Typeof keyword in type annotation and instanceof with a type on the left side is invalid.

Description:
Added checks for these cases and error logging.

Change-Id: Iee44ecfe838a60c13738bf54226a0e73c566bd00
Signed-off-by: Haag Boglarka <boglarka.haag@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1243,3 +1243,11 @@ syntax:
 - name: ERROR_ARKTS_NO_AMBIENT_DECLS
   id: 308
   message: "Ambient module declaration is not supported!"
+
+- name: TYPEOF_IN_ANNOTATION
+  id: 309
+  message: "Result of 'typeof' operator is not supported to be used as type annotation."
+
+- name: WRONG_LEFT_OF_INSTANCEOF
+  id: 310
+  message: "The left operand of 'instanceof' operator cannot be a type."
