Add diagnostics for import for side effects
Fixes #24689 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICCBQN

Change-Id: If1def850d9efd6c049cd896674824766c9c17243
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -225,6 +225,15 @@ syntax:
   id: 312
   message: "Importing by 'require' and 'import' assignment is not supported, use 'import * as ... from ...' form instead!"
 
+- name: ERROR_ARKTS_NO_SIDE_EFFECT_IMPORT
+  id: 73297
+  message: "Importing for side-effect only is prohibited! Please provide objects to be imported explicitly or use * to import
+    all objects declared in the module!"
+
+- name: ERROR_ARKTS_NO_UMD
+  id: 114179
+  message: "Universal module definitions are not supported, please use ordinary import/export syntax instead."
+
 - name: ERROR_ARKTS_NO_VAR
   id: 297
   message: "'var' keyword is not supported. Use 'let' instead."
