Support gradula type and any type in bc
Description:
1. support gradual type, all the types except escompat & arkts1.2 type in the dynamic
Declaration file are treated as gradual type. fe type checking is enabled.
2. add lowering to transfrom gradual type to any type, and emit any type related bc

Issue:     https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICE0RF?from=project-issue
Signed-off-by: xuxinjie4 <xuxinjie4@huawei.com>
Signed-off-by: daizihan <daizihan@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -130,6 +130,7 @@ libes2panda_sources = [
   "checker/types/ets/etsAnyType.cpp",
   "checker/types/ets/wildcardType.cpp",
   "checker/types/globalTypesHolder.cpp",
+  "checker/types/gradualType.cpp",
   "checker/types/signature.cpp",
   "checker/types/ts/anyType.cpp",
   "checker/types/ts/arrayType.cpp",
@@ -224,11 +225,13 @@ libes2panda_sources = [
   "compiler/lowering/ets/expressionLambdaLowering.cpp",
   "compiler/lowering/ets/extensionAccessorLowering.cpp",
   "compiler/lowering/ets/genericBridgesLowering.cpp",
+  "compiler/lowering/ets/gradualTypeNarrowing.cpp",
   "compiler/lowering/ets/insertOptionalParametersAnnotation.cpp",
   "compiler/lowering/ets/interfaceObjectLiteralLowering.cpp",
   "compiler/lowering/ets/interfacePropertyDeclarations.cpp",
   "compiler/lowering/ets/lateInitialization.cpp",
   "compiler/lowering/ets/lambdaLowering.cpp",
+  "compiler/lowering/ets/dynamicImport.cpp",
   "compiler/lowering/ets/localClassLowering.cpp",
   "compiler/lowering/ets/objectIndexAccess.cpp",
   "compiler/lowering/ets/objectIterator.cpp",
