[LSP] Support UI Plugin Code Fixes
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICC5VX
Signed-off-by: yaohaosen <yaohaosen@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -140,6 +140,10 @@ ets2panda_add_gtest(lsp_api_completions_test CPP_SOURCES
     get_completions.cpp
 )
 
+ets2panda_add_gtest(lsp_api_ui_suggest_test CPP_SOURCES
+    code_fix/ui_plugin_suggest.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_get_class_hierarchy_info CPP_SOURCES
     class_hierarchy_info_test.cpp
 )
