--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -83,6 +83,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/register_code_fix/forgetten_this_property_access.cpp",
     "src/register_code_fix/import_fixes.cpp",
     "src/rename.cpp",
+    "src/register_code_fix/ui_plugin_suggest.cpp",
     "src/script_element_kind.cpp",
     "src/services/services.cpp",
     "src/services/text_change/change_tracker.cpp",
