--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -65,6 +65,7 @@ set(ES2PANDA_LSP_SRC
   ./src/register_code_fix/fix_nan_equality.cpp
   ./src/register_code_fix/forgetten_this_property_access.cpp
   ./src/register_code_fix/import_fixes.cpp
+  ./src/register_code_fix/ui_plugin_suggest.cpp
   ./src/get_name_or_dotted_name_span.cpp
 )
 
