Diagnostics for function expression and params
Fixes #24642 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICCNG1

Testing: ast, astchecker, parser

Change-Id: I7ec5c7b534f1aef2df8539d0696a2e1e0add651f
Signed-off-by: Peter Pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1279,3 +1279,11 @@ syntax:
 - name: NOT_AS_OBJECT
   id: 318
   message: "{} cannot be used as object."
+
+- name: FIELD_IN_PARAM
+  id: 319
+  message: "Declaring fields in parameter list is not supported"
+
+- name: FUNC_EXPR
+  id: 320
+  message: "Function expressions are not supported, use arrow functions instead"
