Add error for using namespaces as object
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICCJ7D

Reason:
Using namespaces or classes as object is invalid

Description:
Modified error masseges

Change-Id: I7ec5c7b534f1aef2df8539d0696a2e1e0add651f
Signed-off-by: Haag Boglarka <boglarka.haag@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1275,3 +1275,7 @@ syntax:
 - name: HARD_KEYWORD_IDENT
   id: 316
   message: "Hard keyword '{}' cannot be used as identifier"
+
+- name: NOT_AS_OBJECT
+  id: 318
+  message: "{} cannot be used as object."
