Allow "use static" on files first line
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICACF5

Description:
Allow use "use static" on the first line of source files and declaration files
1. In parser phase, first step is to attempt to load "use static" -> StringLiteral and add it to topstatements.
2. In TopLevelStatements phase, check topstatements. If the first statement is "use static", remove it.

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: zengzengran <zengran2@huawei.com>#

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -218,6 +218,8 @@ defines:
   - name: 'InterfaceObjectLiteral'
     ref: INTERFACE_OBJ_LITERAL
     comment: ETS annotation type
+  - name: 'use static'
+    ref: STATIC_PROGRAM_FLAG
 
 packages:
   - name: 'std.core'
