fix migration helper report ts,js files
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICDTG3

Signed-off-by: fanglou <fanglou@huawei.com>
Change-Id: I114cb6bc8dbcde7e91d6384aa15141f86937498a

--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -16,9 +16,8 @@
     "compile": "npm run tsc",
     "postcompile": "node scripts/testRunner/post-compile.mjs",
     "build": "npm run clean && npm run compile && npm run webpack && npm run pack:linter",
-    "preinstall": "npm install --production --prefix arkanalyzer && npm install --production --prefix homecheck",
     "install-ohos-typescript": "node scripts/install-ohos-typescript-and-homecheck.mjs",
-    "pack:linter": "rimraf bundle && mkdir bundle && npm pack --pack-destination bundle",
+    "pack:linter": "rimraf bundle && mkdir bundle && npm pack && mv panda-tslinter-*.tgz bundle",
     "pretest": " npm run fix",
     "test": "npm run test_all && npm run test_ts_import_ets",
     "test_all": "npm run testrunner -- -d test/main,test/rules,test/regression,test/extended_features,test/migration,test/ohmurl,test/interop,test/sdkwhite,test/concurrent,test/builtin",
