support getApplicableRefactors refactors
support getApplicableRefactors refactors

Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICE3WK

Signed-off-by: leo9001 <wanglong201@h-partners.com>

--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -73,7 +73,11 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/organize_imports.cpp",
     "src/quick_info.cpp",
     "src/refactor_provider.cpp",
+    "src/refactors/convert_chain.cpp",
+    "src/refactors/convert_export.cpp",
     "src/refactors/convert_function.cpp",
+    "src/refactors/convert_import.cpp",
+    "src/refactors/convert_template.cpp",
     "src/refactors/refactor_types.cpp",
     "src/references.cpp",
     "src/register_code_fix/add_missing_declare_property.cpp",
