--- a/ets2panda/bindings/package.json
+++ b/ets2panda/bindings/package.json
@@ -7,8 +7,7 @@
     "@types/node": "^18.0.0",
     "prettier": "latest",
     "rimraf": "^6.0.1",
-    "typescript": "4.9.5",
-    "node-api-headers": "^1.4.0"
+    "typescript": "4.9.5"
   },
   "main": "dist/index.js",
   "scripts": {
