--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -337,24 +337,33 @@ action("build_bindings") {
     ":ts_bindings",
   ]
   sources = [
-    "./src/Es2pandaNativeModule.ts",
-    "./src/InteropNativeModule.ts",
-    "./src/InteropTypes.ts",
-    "./src/Platform.ts",
-    "./src/Wrapper.ts",
-    "./src/arrays.ts",
-    "./src/generated/Es2pandaEnums.ts",
-    "./src/generated/Es2pandaNativeModule.ts",
-    "./src/global.ts",
-    "./src/index.ts",
-    "./src/loadLibraries.ts",
-    "./src/lspNode.ts",
-    "./src/mainWrapper.ts",
-    "./src/private.ts",
-    "./src/strings.ts",
-    "./src/ts-reflection.ts",
-    "./src/types.ts",
-    "./src/utils.ts",
+    "src/common/Es2pandaNativeModule.ts",
+    "src/common/InteropNativeModule.ts",
+    "src/common/InteropTypes.ts",
+    "src/common/Platform.ts",
+    "src/common/Wrapper.ts",
+    "src/common/arrays.ts",
+    "src/common/driver_helper.ts",
+    "src/common/global.ts",
+    "src/common/loadLibraries.ts",
+    "src/common/mainWrapper.ts",
+    "src/common/preDefine.ts",
+    "src/common/private.ts",
+    "src/common/strings.ts",
+    "src/common/ts-reflection.ts",
+    "src/common/types.ts",
+    "src/common/ui_plugins_driver.ts",
+    "src/common/utils.ts",
+    "src/common/arkTSConfigGenerator.ts",
+    "src/generated/Es2pandaEnums.ts",
+    "src/generated/Es2pandaNativeModule.ts",
+    "src/index.ts",
+    "src/lsp/compile_thread_worker.ts",
+    "src/lsp/generateArkTSConfig.ts",
+    "src/lsp/generateBuildConfig.ts",
+    "src/lsp/index.ts",
+    "src/lsp/lspNode.ts",
+    "src/lsp/lsp_helper.ts",
   ]
   script = "build_bindings.py"
 
