--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -34,6 +34,7 @@
     "entry1_2_external_har1_2:gen_abc": "npm run build && node ./dist/entry.js test/e2e/entry1_2_external_har1_2/build_config.json",
     "entry1_2_external_hsp1_2:gen_abc": "npm run build && node ./dist/entry.js test/e2e/entry1_2_external_hsp1_2/build_config.json",
     "entry1_2_external_hsp1_2:gen_decl": "npm run build && node ./dist/entry.js test/e2e/entry1_2_external_hsp1_2/build_config_decl.json",
+    "IncrementDemo:gen_abc": "npm run build && node ./dist/entry.js test/e2e/IncrementDemo/build_config.json",
 
     "mixed_hap:gen_decl": "npm run build && node ./dist/entry.js test/demo_mix_hap/build_config_decl.json",
     "mixed_hap:gen_abc": "node ./dist/entry.js test/demo_mix_hap/build_config.json",
@@ -44,7 +45,9 @@
     "ut_test": "jest test/ut",
     "plugin_test": "jest --testMatch='<rootDir>/test/plugin/**/*.test.ts'",
     "build_system_Utest": "jest --testMatch='**/test/ut/**/*.test.ts' --testPathIgnorePatterns='test/e2e/'",
-    "build_system_Etest": "TEST=demo_entry1.2_hsp1.1:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'"
+    "build_system_Etest": "TEST=demo_entry1.2_hsp1.1:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'",
+    "IncrementCompileTest1": "npm run build && node ./dist/entry.js test/e2e/IncrementDemo/build_config.json && sed -i 's/hello world from harA!/hello world from harA! (modified)/' \"$(pwd)/test/e2e/IncrementDemo/harB/index.ets\" && TEST=IncrementDemo:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'",
+    "IncrementCompileTest2": "npm run build && node ./dist/entry.js test/e2e/IncrementDemo/build_config.json && sed -i 's/console.log(strA)/console.log(strA + \"modified\")/' \"$(pwd)/test/e2e/IncrementDemo/entry/index.ets\" && TEST=IncrementDemo:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
