--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -378,3 +378,8 @@ options:
   type: bool
   default: false
   description: Place AST trees in permanent arena
+
+- name: dump-perf-metrics
+  type: bool
+  default: false
+  description: Dump es2panda performance metrics
