Compiler diagnostic improvement
arkts-no-ctor-signatures-iface

Modified the parser to give error message when using 'new' keyword in interface body

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICFK7P
Internal issue: #23519

Change-Id: I5a9fb1bf1d609afe2f9a1c762e38f773803bc788
Signed-off-by: Istvan Romai <istvan.romai@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -222,6 +222,10 @@ syntax:
   id: 313
   message: "Import assertion is not supported, please use the ordinary import syntax instead!"
 
+- name: ERROR_ARKTS_NO_INTERFACE_CONSTRUCTOR_SIGNATURES
+  id: 81515
+  message: "Constructor signatures are not supported in interfaces, use methods instead!"
+
 - name: ERROR_ARKTS_NO_PRIVATE_IDENTIFIERS
   id: 298
   message: "Use 'private' keyword to declare an identifier as private."
