--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -41,6 +41,7 @@
     "demo_hap:gen_abc": "npm run build && node ./dist/entry.js test/demo_hap/build_config.json",
 
     "ut_test": "jest test/ut",
+    "plugin_test": "jest --testMatch='<rootDir>/test/plugin/**/*.test.ts'",
     "build_system_Utest": "jest --testMatch='**/test/ut/**/*.test.ts' --testPathIgnorePatterns='test/e2e/'",
     "build_system_Etest": "TEST=demo_entry1.2_hsp1.1:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'"
   },
